2010-07-06  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Teach TreeBuilder how to handle <form><form>
        https://bugs.webkit.org/show_bug.cgi?id=41741

        * html5lib/runner-expected-html5.txt:

2010-07-06  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        <table> should auto-close <p> when not in quirks mode
        https://bugs.webkit.org/show_bug.cgi?id=41740

        * html5lib/runner-expected-html5.txt:

2010-07-06  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Make "in body" character handling reconstruct active formatting elements
        https://bugs.webkit.org/show_bug.cgi?id=41739

        * html5lib/runner-expected-html5.txt:

2010-07-06  Nikolas Zimmermann  <nzimmermann@rim.com>

        Reviewed by Darin Adler.

        <use> on <font-face> causes crashes, if SVGUseElement gets detached
        https://bugs.webkit.org/show_bug.cgi?id=41621

        * platform/mac/svg/custom/use-font-face-crash-expected.checksum: Added.
        * platform/mac/svg/custom/use-font-face-crash-expected.png: Added.
        * platform/mac/svg/custom/use-font-face-crash-expected.txt: Added.
        * svg/custom/use-font-face-crash.svg: Added.

2010-07-07  Hayato Ito  <hayato@chromium.org>

        Reviewed by Darin Adler.

        Rolling out 'page-break-inside:avoid' part of the r54929.
        Rebased the related layout tests, which are now expected to fail, as well.

        https://bugs.webkit.org/show_bug.cgi?id=41532

        * fast/multicol/break-properties-expected.txt:
        * printing/page-break-inside-avoid-expected.txt:

2010-07-06  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Joseph Pecoraro.

        Web Inspector: provide line numbers for inline styles.

        https://bugs.webkit.org/show_bug.cgi?id=41691

        * http/tests/inspector/inspector-test.js:
        (runAfterIframeIsLoaded.step):
        (runAfterIframeIsLoaded):